--- a/punto-2/index.html
+++ b/punto-2/index.html
@@ -8,9 +8,9 @@
 <body>
     <div id="app">
         <h1>Gestión de notas</h1>
-        <input type="text" id="new-grade" placeholder="Nueva nota">
-        <button id="add-grade">Agregar Nota</button>
-        <ul id="grade-list"></ul>
+        <input type="text" id="new-note" placeholder="Nueva nota">
+        <button id="add-note">Agregar Nota</button>
+        <ul id="note-list"></ul>
     </div>
 
     <script src="app.js"></script>
